Fix emojier displaying a blank window with ibus 1.5.26

Skip over invalid entries in a dictionary instead of throwing
the whole dictionary away.

Also change the qWarning() message to reflect the new reality.

BUG: 457521
FIXED-IN: 5.26